Game over screens and function
working on mobile info -> not finished

--- a/frontend/src/app/pages/augmented-table/augmented-table.component.html
+++ b/frontend/src/app/pages/augmented-table/augmented-table.component.html
@@ -84,4 +84,8 @@
             </div>
         </div>
     </div>
+    <div class="gameEnd" *ngIf="gameEnded()" >
+        <img src="/assets/augmented_table/gameOverDay.png" *ngIf="isDay()" alt="">
+        <img src="/assets/augmented_table/gameOverNight.png" *ngIf="!isDay()" alt="">
+    </div>
 </div>
