--- a/frontend/src/app/pages/mobile/mainpage/info/info.component.scss
+++ b/frontend/src/app/pages/mobile/mainpage/info/info.component.scss
@@ -1,8 +1,58 @@
-.background {
-    background-color: #34495e;
-    width: 360px; 
-    
-  }
-  #info{
-    width: 100%;
-  }
+#container {
+  position: relative;
+  font-family: Revalia;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  color: #FFFFFF;
+  height: 100%;
+  align-items: center;
+  align-self: center;
+  min-height: 400px;
+  margin: auto;
+}
+#info {
+  width: 100%;
+}
+
+#roleDes {
+  width: 100%;
+  margin: 20px;
+  font-family: Revalia;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 30px;
+  line-height: 30px;
+  text-align: center;
+
+  color: #ffffff;
+}
+
+.roles {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin: 0 auto;
+}
+
+.role {
+  width: 90%;
+  height: 78px;
+  border: white;
+  border-radius: 10px;
+  background-color: white;
+  overflow: hidden;
+  margin: auto;
+  padding: 12px;
+}
+
+.roleText {
+  width: 77%;
+  height: 100%;
+  float: right;
+  font-size: 14px;
+  color: #000000;
+  overflow: hidden;
+  overflow-wrap: break-word;
+}
