--- a/frontend/src/app/pages/smart-tv/smart-tv.component.scss
+++ b/frontend/src/app/pages/smart-tv/smart-tv.component.scss
@@ -44,6 +44,12 @@
   margin-top: -20px;
 }
 
+.cardicon {
+  height: auto;
+  width: 90%;
+  margin: auto;
+}
+
 #tv-rectangle {
   position: absolute;
   width: 1920px;
