--- a/frontend/src/app/pages/mobile/mainpage/info/info.component.html
+++ b/frontend/src/app/pages/mobile/mainpage/info/info.component.html
@@ -2,7 +2,13 @@
     <div id="roleDes">Role Description</div>
     <div class="roles">
         <div class="role" *ngFor="let role of roles;">
+            <div class="roleImg">
+                <img src="/assets/mobile/info/{{role.name}}.png" alt="">
+            </div>
             <div class="roleText">{{role.description}}</div>
+            <div class="arrow">
+                <img src="/assets/mobile/info/right-arrow.png" alt="">
+            </div>
             <!-- <img style="width: 85%;" src="/assets/players/{{player.avatar_path}}"> -->
         </div>
     </div>
