--- a/frontend/src/app/pages/mobile/mainpage/info/info.component.scss
+++ b/frontend/src/app/pages/mobile/mainpage/info/info.component.scss
@@ -4,7 +4,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  color: #FFFFFF;
+  color: #ffffff;
   height: 100%;
   align-items: center;
   align-self: center;
@@ -39,6 +39,8 @@
 .role {
   width: 90%;
   height: 78px;
+  display: flex;
+  justify-content: space-between;
   border: white;
   border-radius: 10px;
   background-color: white;
@@ -48,11 +50,20 @@
 }
 
 .roleText {
-  width: 77%;
+  width: 80%;
   height: 100%;
-  float: right;
+  padding-left: 19px;
   font-size: 14px;
   color: #000000;
   overflow: hidden;
   overflow-wrap: break-word;
+}
+
+.roleImg {
+  width: 16%;
+  float: left;
+}
+
+.arrow {
+  margin: auto;
 }
