--- a/frontend/src/app/pages/mobile/mainpage/home/home.component.html
+++ b/frontend/src/app/pages/mobile/mainpage/home/home.component.html
@@ -3,20 +3,23 @@
     <div *ngIf="!parent.isWaiting()">
         <div id="cards">
             <div class="flip-card" *ngFor="let player of parent.players; let i = index;">
-                <div class="flip-card-inner" (click)="toggleflip(i)" [ngClass]="flips[i] ? 'flip' : ''">
-                    <div class="flip-card-front">
-                        <img class="avatar" src="/assets/players/mobile_{{player.avatar_path}}">
-                        <div class="playername">{{player.name}}<span *ngIf="i==0" style="opacity: 0.5;"><br>(You)</span></div>
+                <div class="flip-card-inner" (click)="toggleflip(i)" [ngClass]="flips[i] ? 'flip' : ''"
+                >
+                    <div class="flip-card-front" [class.dead]="player.dead !='alive'">
+                        <img class="avatar" src="/assets/players/{{getpath(player.avatar_path)}}">
+                        <div class="playername">{{player.name}}<span *ngIf="i==0" style="opacity: 0.5;"><br>(You)</span>
+                        </div>
                     </div>
-                    <div class="flip-card-back">
+                    <div class="flip-card-back" [class.dead]="player.dead !='alive'">
                         <div class="myrow">
-                            <img class="avatar" src="/assets/players/mobile_{{player.avatar_path}}">
+                            <img class="avatar" src="/assets/players/{{getpath(player.avatar_path)}}">
                             <div style="display: flex;
                             justify-content: center;
                             align-content: center;
                             flex-direction: column;
                             height:100%">
-                                <div class="playername">{{player.name}}<span *ngIf="i==0" style="opacity: 0.5;font-size: 11px;"><br>(You)</span></div>
+                                <div class="playername">{{player.name}}<span *ngIf="i==0"
+                                        style="opacity: 0.5;font-size: 11px;"><br>(You)</span></div>
 
                             </div>
                         </div>
