knives, dayCounter event

--- a/frontend/src/app/pages/augmented-table/augmented-table.component.html
+++ b/frontend/src/app/pages/augmented-table/augmented-table.component.html
@@ -65,6 +65,14 @@
             <div class="player" *ngFor="let player of left_players; let i=index">
                 <div class="name_text">{{player.name}}</div>
                 <img style="width: 85%;" src="/assets/players/{{player.avatar_path}}">
+                <div class="knives">
+                    <img class="knife" id="knife0" src="/assets/augmented_table/knife0.png" alt="">
+                    <img class="knife" id="knife1" src="/assets/augmented_table/knife1.png" alt="">
+                    <img class="knife" id="knife2" src="/assets/augmented_table/knife2.png" alt="">
+                    <img class="knife" id="knife3" src="/assets/augmented_table/knife3.png" alt="">
+                    <img class="knife" id="knife4" src="/assets/augmented_table/knife4.png" alt="">
+                    <img class="knife" id="knife5" src="/assets/augmented_table/knife5.png" alt="">
+                </div>
             </div>
         </div>
     </div>
@@ -73,6 +81,14 @@
             <div class="player" *ngFor="let player of right_players; let i=index">
                 <div class="name_text">{{player.name}}</div>
                 <img style="width: 85%;" src="/assets/players/{{player.avatar_path}}">
+                <div class="knives">
+                    <img class="knife" id="knife0" src="/assets/augmented_table/knife0.png" alt="">
+                    <img class="knife" id="knife1" src="/assets/augmented_table/knife1.png" alt="">
+                    <img class="knife" id="knife2" src="/assets/augmented_table/knife2.png" alt="">
+                    <img class="knife" id="knife3" src="/assets/augmented_table/knife3.png" alt="">
+                    <img class="knife" id="knife4" src="/assets/augmented_table/knife4.png" alt="">
+                    <img class="knife" id="knife5" src="/assets/augmented_table/knife5.png" alt="">
+                </div>
             </div>
         </div>
     </div>
@@ -81,6 +97,14 @@
             <div class="player" *ngFor="let player of middle_players; let i=index">
                 <div class="name_text">{{player.name}}</div>
                 <img style="width: 85%;" src="/assets/players/{{player.avatar_path}}">
+                <div class="knives">
+                    <img class="knife" id="knife0" src="/assets/augmented_table/knife0.png" alt="">
+                    <img class="knife" id="knife1" src="/assets/augmented_table/knife1.png" alt="">
+                    <img class="knife" id="knife2" src="/assets/augmented_table/knife2.png" alt="">
+                    <img class="knife" id="knife3" src="/assets/augmented_table/knife3.png" alt="">
+                    <img class="knife" id="knife4" src="/assets/augmented_table/knife4.png" alt="">
+                    <img class="knife" id="knife5" src="/assets/augmented_table/knife5.png" alt="">
+                </div>
             </div>
         </div>
     </div>
