--- a/frontend/src/app/pages/augmented-table/augmented-table.component.scss
+++ b/frontend/src/app/pages/augmented-table/augmented-table.component.scss
@@ -77,7 +77,7 @@
 }
 
 .phaseText {
-  font-family: 'Revalia';
+  font-family: "Revalia";
   font-size: 20px;
   color: white;
   height: 50px;
@@ -109,7 +109,7 @@
 .selectedPhaseWrapper {
   position: relative;
   margin: 0 auto;
-  border: 7px solid #D35400;
+  border: 7px solid #d35400;
   background-color: #f39c12;
   border-radius: 50%;
   height: 139.71px;
@@ -119,7 +119,7 @@
 .selectedPhaseWrapperNight {
   position: relative;
   margin: 0 auto;
-  border: 7px solid #E74C3C;
+  border: 7px solid #e74c3c;
   background-color: #929292;
   border-radius: 50%;
   height: 139.71px;
@@ -127,7 +127,7 @@
 }
 
 .selectedPhaseText {
-  font-family: 'Revalia';
+  font-family: "Revalia";
   font-size: 22px;
   color: white;
   height: 25px;
@@ -142,14 +142,13 @@
   font-size: 36px;
   line-height: 45px;
   text-align: center;
-  color: #656D78;
-  background: #F5F7FA;
+  color: #656d78;
+  background: #f5f7fa;
   border-radius: 28px;
   margin-bottom: 5%;
   width: 206px;
   height: 46px;
 }
-
 
 .hide {
   display: none !important;
@@ -174,7 +173,7 @@
 .middlePlayers {
   width: 1080px;
   position: absolute;
-  bottom: 0%;
+  bottom: 1%;
   left: 15.5%;
 }
 
@@ -207,8 +206,8 @@
   font-style: normal;
   font-weight: normal;
   text-align: center;
-  color: #656D78;
-  background: #F5F7FA;
+  color: #656d78;
+  background: #f5f7fa;
   border-radius: 28px;
   margin: 0 0 5%;
   font-size: 2.3vmax;
@@ -218,6 +217,67 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.knives {
+  position: absolute;
+  width: 334px;
+  height: 284px;
+}
+
+.knife {
+  width: 96px;
+  height: 96px;
+}
+
+#knife0 {
+  position: absolute;
+  width: 119.74px;
+  height: 123.33px;
+  left: 15px;
+  top: 11px;
+}
+
+#knife1 {
+  position: absolute;
+  width: 119.74px;
+  height: 123.33px;
+  left: 193px;
+  top: 13px;
+}
+
+#knife2 {
+  position: absolute;
+  width: 96.12px;
+  height: 97.66px;
+  left: 15px;
+  top: 89px;
+}
+
+#knife3 {
+  position: absolute;
+  width: 96.12px;
+  height: 97.66px;
+  left: 222px;
+  top: 89px;
+}
+
+#knife4 {
+  position: absolute;
+  width: 123px;
+  height: 119px;
+  left: 20px;
+  top: 120px;
+  transform: rotate(18deg);
+}
+
+#knife5 {
+  position: absolute;
+  width: 120.09px;
+  height: 123.64px;
+  left: 204px;
+  top: 124px;
+  transform: rotate(-10deg);
 }
 
 .gameEnd {
