--- a/frontend/src/app/pages/mobile/mainpage/voting/voting.component.scss
+++ b/frontend/src/app/pages/mobile/mainpage/voting/voting.component.scss
@@ -53,6 +53,7 @@
   font-weight: normal;
   font-size: 18px;
   line-height: 25px;
+  text-align: center;
 }
 
 #prompt {
@@ -88,7 +89,7 @@
 #hint {
   font-size: 12px;
   line-height: 12px;
-
+  margin: 10px 0;
   font-size: 10px;
   line-height: 12px;
   text-align: center;
