--- a/frontend/src/app/pages/interactive-wall/interactive-wall.component.scss
+++ b/frontend/src/app/pages/interactive-wall/interactive-wall.component.scss
@@ -88,14 +88,26 @@
   top: 377px;
 }
 
-.timeline {
+#timeline {
   position: relative;
   left: 155px;
   z-index: 2;
   width: 100%;
-  overflow: auto;
+  overflow: hidden;
   height: auto;
 }
+
+.slideup, .slidedown {
+  max-height: 800px;            
+  overflow-y: hidden;
+  -webkit-transition: max-height 1.5s ease-in-out;
+  -moz-transition: max-height 1.5s ease-in-out;
+  -o-transition: max-height 1.5s ease-in-out;
+  transition: max-height 1.5s ease-in-out;
+}
+.slidedown {            
+  max-height: 800px ;                    
+}    
 
 ::-webkit-scrollbar {
   width: 0px;
