--- a/frontend/src/app/pages/interactive-wall/interactive-wall.component.html
+++ b/frontend/src/app/pages/interactive-wall/interactive-wall.component.html
@@ -1,43 +1,47 @@
 <div class="all" [style.background-color]="backgroundColor">
-  <div class="wrapper">
-    <div id="bar" [ngStyle]="{display:(lap > 1)?'block':'none'}">
-    </div>
-    <div class="column" id="timeline" [ngStyle]="{display:(lap > 1)?'block':'none'}" (click)="swipeTimelineDown();">
-      <img class="game_start" src="/assets/interactive-wall/game_start.png" [ngStyle]="{display:(lap > 1)?'inherit':'none'}"alt="game start">
-      <div *ngFor="let phase of phases; let i=index" style="height: 175px;">
-        <div class="timelineRow">
-          <div class="circleAndText">
-            <img class="circle"
-              [attr.src]="(phases[i] == 'Day')? '/assets/interactive-wall/circle_day.png' : '/assets/interactive-wall/circle_night.png'"
-              alt="circle">
-            <div id="day_txt" [ngStyle]="{display:(lap > 1)?'block':'none'}">{{phases[i]}} {{phases_num_array[i]}}</div>
-          </div>
-          <div *ngFor="let suspect of suspects_pngs; let i=index" class="suspects">
-            <img class="suspect" src="/assets/interactive-wall/{{suspect}}" alt="avatar of suspect">
-            <div id="voters">
-              <div *ngFor="let voter of voters_pngs.get(suspect); let i=index">
-                <img class="voter" src="/assets/interactive-wall/{{voter}}" alt="avatar of suspect">
+  <div *ngIf="(playersJoined == true)">
+    <div class="wrapper">
+      <div id="bar" [ngStyle]="{display:(lap > 1)?'block':'none'}">
+      </div>
+      <div class="column" id="timeline" [ngStyle]="{display:(lap > 1)?'block':'none'}" (click)="swipeTimelineDown();">
+        <img class="game_start" src="/assets/interactive-wall/game_start.png"
+          [ngStyle]="{display:(lap > 1)?'inherit':'none'}" alt="game start">
+        <div *ngFor="let phase of phases; let i=index" style="height: 175px;">
+          <div class="timelineRow">
+            <div class="circleAndText">
+              <img class="circle"
+                [attr.src]="(phases[i] == 'Day')? '/assets/interactive-wall/circle_day.png' : '/assets/interactive-wall/circle_night.png'"
+                alt="circle">
+              <div id="day_txt" [ngStyle]="{display:(lap > 1)?'block':'none'}">{{phases[i]}} {{phases_num_array[i]}}
+              </div>
+            </div>
+            <div *ngFor="let suspect of suspects_pngs; let i=index" class="suspects">
+              <img class="suspect" src="/assets/interactive-wall/{{suspect}}" alt="avatar of suspect">
+              <div id="voters">
+                <div *ngFor="let voter of voters_pngs.get(suspect); let i=index">
+                  <img class="voter" src="/assets/interactive-wall/{{voter}}" alt="avatar of suspect">
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+      <div id="narrator_title" [ngStyle]="{display:(lap == 0)?'block':'none'}">Select Narrator:</div>
     </div>
-    <div id="narrator_title" [ngStyle]="{display:(lap == 0)?'block':'none'}">Select Narrator:</div>
+    <div class="button_container row" [ngStyle]="{'margin-top':(lap != 0)?'6%':'0%'}">
+      <div class="butt plyr_butt" [ngStyle]="{display:(lap == 0)?'block':'none'}">
+        <img id="player_icon" src="/assets/interactive-wall/player_icon.png" alt="player icon">
+        <p>Player</p>
+      </div>
+      <div class="butt spkr_butt" (click)="speakerSelected();" [ngStyle]="{display:(1 >= lap)?'block':'none'}"
+        [ngStyle]="{opacity:(lap != 0)?'1':'0.6'}">
+        <img id="speaker" src="/assets/interactive-wall/speaker.png" alt="speaker icon">
+        <p>Speaker</p>
+      </div>
+    </div>
+    <div id="narr_txt" [ngStyle]="{display:(lap == 1)?'block':'none'}">Smart Speaker will guide you through your
+      game</div>
+    <img class="{{background_icon}}" src="/assets/interactive-wall/{{background_icon}}.png"
+      [ngStyle]="{display:(lap > 1)?'block':'none'}" alt="background icon">
   </div>
-  <div class="button_container row" [ngStyle]="{'margin-top':(lap != 0)?'6%':'0%'}">
-    <div class="butt plyr_butt" [ngStyle]="{display:(lap == 0)?'block':'none'}">
-      <img id="player_icon" src="/assets/interactive-wall/player_icon.png" alt="player icon">
-      <p>Player</p>
-    </div>
-    <div class="butt spkr_butt" (click)="speakerSelected();" [ngStyle]="{display:(1 >= lap)?'block':'none'}"
-      [ngStyle]="{opacity:(lap != 0)?'1':'0.6'}">
-      <img id="speaker" src="/assets/interactive-wall/speaker.png" alt="speaker icon">
-      <p>Speaker</p>
-    </div>
-  </div>
-  <div id="narr_txt" [ngStyle]="{display:(lap == 1)?'block':'none'}">Smart Speaker will guide you through your
-    game</div>
-  <img class="{{background_icon}}" src="/assets/interactive-wall/{{background_icon}}.png"
-    [ngStyle]="{display:(lap > 1)?'block':'none'}" alt="background icon">
 </div>
