--- a/frontend/src/app/pages/interactive-wall/interactive-wall.component.scss
+++ b/frontend/src/app/pages/interactive-wall/interactive-wall.component.scss
@@ -97,17 +97,81 @@
   height: auto;
 }
 
-.slideup, .slidedown {
-  max-height: 800px;            
+@-webkit-keyframes slideInDown {
+  from {
+    -webkit-transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -100%, 0);
+    visibility: visible;
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes slideInDown {
+  from {
+    -webkit-transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -100%, 0);
+    visibility: visible;
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.slideInDown {
+  -webkit-animation-name: slideInDown;
+  animation-name: slideInDown;
+}
+
+@-webkit-keyframes slideInUp {
+  from {
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+    visibility: visible;
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes slideInUp {
+  from {
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+    visibility: visible;
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.slideInUp {
+  -webkit-animation-name: slideInUp;
+  animation-name: slideInUp;
+}
+
+.slideup,
+.slidedown {
+  max-height: 800px;
   overflow-y: hidden;
   -webkit-transition: max-height 1.5s ease-in-out;
   -moz-transition: max-height 1.5s ease-in-out;
   -o-transition: max-height 1.5s ease-in-out;
   transition: max-height 1.5s ease-in-out;
 }
-.slidedown {            
-  max-height: 800px ;                    
-}    
+
+.slidedown {
+  max-height: 800px;
+}
 
 ::-webkit-scrollbar {
   width: 0px;
