wall - needs fixing cannot get history of votes

--- a/frontend/src/app/pages/interactive-wall/interactive-wall.component.html
+++ b/frontend/src/app/pages/interactive-wall/interactive-wall.component.html
@@ -16,8 +16,8 @@
               </div>
             </div>
             <div *ngFor="let suspect of suspects_pngs; let i=index" class="suspects">
-              <img class="suspect" src="/assets/interactive-wall/{{suspect}}" alt="avatar of suspect">
-              <div id="voters">
+              <img class="suspect" src="/assets/interactive-wall/{{suspect}}"  alt="avatar of suspect">
+              <div id="voters" [ngStyle]="{width:(expand_width)?'225px':'170px'}">
                 <div *ngFor="let voter of voters_pngs.get(suspect); let i=index">
                   <img class="voter" src="/assets/interactive-wall/{{voter}}" alt="avatar of suspect">
                 </div>
