--- a/frontend/src/app/pages/mobile/mainpage/info/info.component.html
+++ b/frontend/src/app/pages/mobile/mainpage/info/info.component.html
@@ -6,9 +6,9 @@
                 <img src="/assets/mobile/info/{{role.name}}.png" alt="">
             </div>
             <div class="roleText">{{role.description}}</div>
-            <div class="arrow">
+            <!-- <div class="arrow">
                 <img src="/assets/mobile/info/right-arrow.png" alt="">
-            </div>
+            </div> -->
             <!-- <img style="width: 85%;" src="/assets/players/{{player.avatar_path}}"> -->
         </div>
     </div>
